<resources>
    <string name="app_name">EuVou</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_search_a__place">Search_a_Place</string>
    <string name="btnSearchPlace">Pesquise um local</string>
    <string name="labelSearchPlace">Pesquise um local pelo nome</string>
    <string name="title_activity_update">UpdateActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Nome do usuário</string>
    <string name="dateTag">Data de nascimento:</string>
    <string name="email">Email:</string>
    <string name="emailConfirmation">Confirmação de email:</string>
    <string name="passwordConfirmation">Confirmaçao de senha:</string>
    <string name="edit">Alterar</string>
    <string name="login_activity">Bora?</string>

    <string name="title_activity_home_page">HomePage</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="drawer_open">Abrir navigation drawer</string>
    <string name="drawer_close">Fechar navigation drawer</string>
    <string-array name="itens_menu_string">
        <item>Todos</item>
        <item>Museus</item>
        <item>Parques</item>
        <item>Teatros</item>
        <item>Shoppings</item>
        <item>Esportes</item>
    </string-array>

    <!-- Remove user strings -->

<!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_search_user">SearchUser</string>
    <string name="title_activity_maps">Map</string>
    <string name="events">Eventos</string>
    <string name="places">Locais</string>
    <string name="people">Pessoas</string>
    <string name="title_activity_event_consultation">EventConsultation</string>

    <!-- Event Consultation -->
    <string name="DISABLE_ACCOUNT_FRAGMENT_TAG">disable_account_fragment_tag</string>
    <string name="title_activity_local_event">Map</string>
    <string name="event_date">Data:</string>
    <string name="event_description">Descrição:</string>
    <string name="event_name">Nome:</string>
    <string name="event_price">Preço:</string>
    <string name="event_categories">Categorias:</string>
    <string name="event_adress">Endereço:</string>
    <string name="button_show_map_txt">Ver no mapa</string>
    <string name="event_not_found_message">Nenhum evento foi encontrado :(</string>
    <string name="title_activity_show_place_on_map">ShowPlaceOnMap</string>
    <string name="title_activity_show_single">ShowSingle</string>
    <string name="visualizarRanking">Visualizar Rank Completo</string>

</resources>
