<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:gravity="center_vertical"
    android:weightSum="1">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_name"
        android:id="@+id/event_name_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="20dp"
        android:id="@+id/nameEventShow" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/event_description_text"
        android:layout_marginTop="20dp"
        android:text="@string/event_description"
        />

    <TextView
        android:id="@+id/descriptionEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:textColor="#000000"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/date_event_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_date"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/dateEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/event_price_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_price"
        android:layout_marginTop="10dp" />


    <TextView
        android:id="@+id/eventPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/event_categories_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_categories"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/eventCategories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/event_adress_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_adress"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/eventPlaces"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="20dp"/>

    <Button
        android:layout_width="289dp"
        android:layout_height="wrap_content"
        android:id="@+id/editRemoveButton"
        android:textColor="#FFF"
        android:text="Alterar ou Remover este evento"
        android:layout_gravity="center_horizontal"
        android:background="@color/turquesa_app" />
</LinearLayout>